# nudzh

./: README  init  nudzh.cabal  sentgen
src/: LCMC.hs  Main.hs  MakeDb.hs  sents.hs
