name:           nudzh
version:        0.1
license:        GPL
license-file:   LICENSE
author:         dan corson <danl@alum.mit.edu>
synopsis:       <syn>
build-type:     Simple
build-depends:  FUtil, base, containers, directory, filepath, haskell98, xml

executable:     nudzh
main-is:        Main.hs
hs-source-dirs: src

executable:     zsents
main-is:        sents.hs
hs-source-dirs: src
